<resources>
    <string name="app_name">OneBanc</string>
    <string name="txt_top_selling">Top Selling</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_language">Language</string>
    <string name="txt_north">North Indian</string>
    <string name="txt_chinese">Chinese</string>
    <string name="txt_south">South Indian</string>
    <string name="txt_italian">Italian</string>
    <string name="txt_paratha">Paratha</string>
    <string name="txt_dal">Dal</string>
    <string name="txt_panner">Panner</string>
    <string name="txt_chapti">Chapti</string>
    <string name="txt_noodles">Noodles</string>
    <string name="txt_chilly">Chilly Panner</string>
    <string name="txt_fried">Fried Rice</string>
    <string name="txt_momos">Momos</string>
    <string name="txt_dosa">Dosa</string>
    <string name="txt_idli">Idli</string>
    <string name="txt_masala_dosa">Masala Dosa</string>
    <string name="txt_panner_dosa">Panner Dosa</string>
    <string name="txt_pizza">Pizza</string>
    <string name="txt_pasta">Pasta</string>
    <string name="txt_white_pasta">White Sauce Pasta</string>
    <string name="txt_red_pasta">Red Sauce Pasta</string>
    <string name="txt_net_amount">Net Amount</string>
    <string name="txt_cgst">CGST @2.5%</string>
    <string name="txt_sgst">SGST @2.5%</string>
    <string name="txt_grand_total">Grand Total</string>
    <string name="txt_order">Order</string>
    <string name="txt_multiply">*</string>
    <string name="txt_order_success">Order Success</string>
    <string name="template_price">Price : Rs.%s</string>
    <string name="template_rating">Rating : %s</string>
    <string name="txt_no_item">No item added. Add items to place your order.</string>
    <string name="txt_item_added">Item added.</string>
    <string name="txt_item_removed">Item removed.</string>
</resources>